updated my profile page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Hello, I'm Ben 😎</h1>
         <img src="images/photo Ben 2.jpg" class="img-circle" width="100px" alt="Benjamin Watrinet">
         <p>
-          I love Github, UX/UI Design, web-development and motorbikes 🏍️. I launched Le Wagon to teach code to entrepreneurs and creative people around the world 🌍.
+          I like Github, UX/UI Design, web-development and motorbikes 🏍️. I launched Le Wagon to teach code to entrepreneurs and creative people around the world 🌍.
         </p>
         <a href="https://www.lewagon.com" class="btn-blue" > Discover Le Wagon </a>
       </div>
