improved my profile page style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
 
-    <title>My Profile</title>
+    <title>Ben's profile</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -18,7 +18,7 @@
         <h1>Hello, I'm Ben 😎</h1>
         <img src="images/photo Ben 2.jpg" class="img-circle" width="100px" alt="Benjamin Watrinet">
         <p>
-          I like Github, UX/UI Design, web-development and motorbikes 🏍️. I launched Le Wagon to teach code to entrepreneurs and creative people around the world 🌍.
+        I love building products, UX / UI design and skateboarding 🛹. I launched Nuage café & coworking to provide entrepreneurs and creatives with a great place to work and a thriving community in Paris🗼. I also help developing Le Wagon Executive in Casablanca, Morocco 🇲🇦
         </p>
         <a href="https://www.lewagon.com" class="btn-blue" > Discover Le Wagon </a>
       </div>
