added Nuage Cafe

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>
         I love building products, UX / UI design and skateboarding 🛹. I launched Nuage café & coworking to provide entrepreneurs and creatives with a great place to work and a thriving community in Paris🗼. I also help developing Le Wagon Executive in Casablanca, Morocco 🇲🇦
         </p>
-        <a href="https://www.lewagon.com" class="btn-blue" > Discover Le Wagon </a>
+        <a href="https://www.nuagecafe.fr" class="btn-blue" > Discover Nuage Café </a>
       </div>
       <div class="card-white">
         <h2>Follow me</h2>
