improved css style

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hello, I'm Ben 😎</h1>
-        <img src="images/photo Ben 2.jpg" class="img-circle" width="100px" alt="Benjamin Watrinet">
+        <img src="images/photo Ben 2.jpg" class="img-circle" width="150px" alt="Benjamin Watrinet">
         <p>
-        I love building products, UX / UI design and skateboarding 🛹. I launched Nuage café & coworking to provide entrepreneurs and creatives with a great place to work and a thriving community in Paris🗼. I also help developing Le Wagon Executive in Casablanca, Morocco 🇲🇦
+         I co-founded <strong>Nuage Café & Coworking</strong> to provide freelancers, entrepreneurs and creatives with a great place to work and a thriving community in Paris🗼. I also help developing <strong>Le Wagon Executive</strong> in Casablanca, Morocco 🇲🇦
+        </p>
+        <p>
+        PS: I also love skateboarding 🛹 and surfing 🏄.
         </p>
         <a href="https://www.nuagecafe.fr" class="btn-blue" > Discover Nuage Café </a>
       </div>
